--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 <button onclick="loadData()">Load Data</button>
+<button onclick="loadData2()">Load Data</button>
+<button onclick="loadUser()">Load User</button>
+
+    <script src="js/app.js"></script>
     <script src="js/fetch.js"></script>
 </body>
 </html>
