--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-<button onclick="loadData()">Load Data</button>
-<button onclick="loadData2()">Load Data</button>
-<button onclick="loadUser()">Load User</button>
-
+    <button onclick="loadData()">Load Data</button>
+    <button onclick="loadData2()">Load Data</button>
+    <button onclick="loadUser()">Load User</button>
+    <button onclick="loadUsers()">Load User</button>
+    
+    <div class="users-container">
+        <ul id="users-list">
+        </ul>
+    </div>
+     
     <script src="js/app.js"></script>
     <script src="js/fetch.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
