--- a/post.html
+++ b/post.html
@@ -22,6 +22,7 @@
             <div id="posts-container">
                 
             </div>
+            <h1>This is a website where data load via api</h1>
         </section>
     </main>
     <script src="js/post.js"></script>
