--- a/post.html
+++ b/post.html
@@ -23,6 +23,7 @@
                 
             </div>
             <h1>This is a website where data load via api</h1>
+            <h1>This is a website where data load via api</h1>
         </section>
     </main>
     <script src="js/post.js"></script>
