--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <button onclick="loadData2()">Load Data</button>
     <button onclick="loadUser()">Load User</button>
     <button onclick="loadUsers()">Load User</button>
+    <button onclick="createPost()">Create Post</button>
+    <button onclick="deletePost()">Delete Post</button>
+    <button onclick="patchPost()">Patch Post</button>
     
     <div class="users-container">
         <ul id="users-list">
